<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btnConvenioCancelar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvConvenioMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/anhadirConvenioMarcaLabel"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/spMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp" />

    <TextView
        android:id="@+id/tvConvenioDescuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="20sp"
        android:text="@string/anhadirConvenioDescuentoLabel"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etConvenioDescuento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvPorcentaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="%"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>